/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package csheets.ext.advancedWorkbookSearch.ui;

/**
 *
 * @author Pedro Gomes 1130383@isep.ipp.pt
 */
public class WorkbookPreviewPanel {

}
